--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "4.18.2",
     "morgan": "1.10.0",
     "pdf-img-convert": "1.2.1",
-    "sharp": "0.33.2"
+    "sharp": "0.33.2",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/cors": "2.8.17",
