--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/cors": "2.8.17",
     "@types/dotenv": "8.2.0",
     "@types/express": "4.17.21",
-    "@types/morgan": "1.9.9"
+    "@types/morgan": "1.9.9",
+    "@types/serve-favicon": "^2.5.7"
   }
 }
