--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "4.18.2",
     "morgan": "1.10.0",
     "pdf-img-convert": "1.2.1",
+    "serve-favicon": "^2.5.0",
     "sharp": "0.33.2",
     "typescript": "^5.3.3"
   },
@@ -26,6 +27,7 @@
     "@types/cors": "2.8.17",
     "@types/dotenv": "8.2.0",
     "@types/express": "4.17.21",
-    "@types/morgan": "1.9.9"
+    "@types/morgan": "1.9.9",
+    "@types/serve-favicon": "^2.5.7"
   }
 }
