--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "3.504.0",
+    "@types/luxon": "^3.4.2",
+    "@vercel/blob": "^0.22.0",
     "cors": "2.8.5",
     "dotenv": "16.4.1",
     "express": "4.18.2",
+    "luxon": "^3.4.4",
     "morgan": "1.10.0",
     "pdf-img-convert": "1.2.1",
     "serve-favicon": "^2.5.0",
