--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "3.504.0",
+    "@types/express-status-monitor": "^1.3.3",
     "@types/luxon": "^3.4.2",
     "@vercel/blob": "^0.22.0",
     "cors": "2.8.5",
     "dotenv": "16.4.1",
     "express": "4.18.2",
+    "express-status-monitor": "^1.3.4",
     "luxon": "^3.4.4",
     "morgan": "1.10.0",
     "pdf-img-convert": "1.2.1",
